--- a/html/class-3/index.html
+++ b/html/class-3/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>My fast class</title>
+    <title>index</title>
 	<meta charset="UTF-8">
 </head>
 <body>
-	<table border="1" align="center" width="980px" height="1300x">
+	<table border="1" align="center" width="980px" height="111500x">
 		<tr>
-			<td>LOGO</td>
+			<td width="150px" height="150px">
+				<img src="logo.png" width="150" height="150" id="logo">
+			</td>
 			<td colspan="2">BANNER</td>
 		</tr>
 		<tr>
 			<td colspan="3" height="50px">
 				<a href="index.html">Home</a> !
-				<a href="about_us.html">Abut us</a> !
-				<a href="sign_up.html">Sign Up</a> !
+				<a href="about-us.html">Abut us</a> !
+				<a href="sign-up.html">Sign Up</a> !
 			</td>
 		</tr>
 		<tr>
@@ -59,7 +61,7 @@
 					<label>Example of Super Tag--</label>Log10<sup>2</sup>
 				<h3>Lorem Ipsum</h3>
 				<p align="justify">
-					<strong>Lorem Ipsum is simply dummy text</strong> of the printing and typesetting industry. <u>Lorem Ipsum has been the industry's</u> standard dummy text ever since the 1500s, <mark>when an unknown printer took a galley of type</mark> and scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently <em>with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</em>
+					<strong><a  href="https://www.lipsum.com/" target="blank">Lorem Ipsum</a> is simply dummy text</strong> of the printing and typesetting industry. <u>Lorem Ipsum has been the industry's</u> standard dummy text ever since the 1500s, <mark>when an unknown printer took a galley of type</mark> and scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently <em>with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</em>
 				</p>
 			</td>
 			<td width="150px">RIGHT</td>
@@ -76,7 +78,9 @@
 			</td>
 		</tr>
 		<tr>
-			<td colspan="3" height="80px">FOOTER</td>
+			<td colspan="3" height="80px">
+				<a href="#logo">Top</a>
+			</td>
 		</tr>
 		
 	</table>
