--- a/css-partice/index.html
+++ b/css-partice/index.html
@@ -43,6 +43,9 @@
        .right{
             float: right;
        }
+       .ab{
+        color: deeppink;
+       }
     </style>
 </head>
 <body>
@@ -50,7 +53,7 @@
     <p class="box">my fathars name</p>
     <p id="hasan">my mathars name</p>
     <p>my address</p>
-    <div class="box">Human life is short</div>
+    <div class="box ab">Human life is short</div>
     <div id="shadhin">Human life is also</div>
     <div class="box left">Human can stay a</div>
     <div class="box right">growth one stay</div>
