--- a/html/class-3/class-03.html
+++ b/html/class-3/class-03.html
@@ -3,6 +3,9 @@
 <head>
     <title>My Three class</title>
 	<meta charset="UTF-8">
+	<style>
+	
+	</style>
 </head>
 <body>
 	<table border="1" align="center" width="980px" height="111500x">
