--- a/class-sourc/class-03/class-03.html
+++ b/class-sourc/class-03/class-03.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Abut-us</title>
+    <title>My Three class</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<table border="1" align="center" width="980px" height="111500x">
@@ -15,8 +16,8 @@
 		<tr>
 			<td colspan="3" height="50px">
 				<a href="index.html">Home</a> !
-				<a href="about-us.html">Abut-us</a> !
-				<a href="sign-up.html">Sign-Up</a> !
+				<a href="about_us.html">Abut us</a> !
+				<a href="sign_up.html">Sign Up</a> !
 			</td>
 		</tr>
 		<tr>
