--- a/class-sourc/class-03/index.html
+++ b/class-sourc/class-03/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>index</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<table border="1" align="center" width="980px" height="111500x">
@@ -22,7 +23,7 @@
 		<tr>
 			<td>LEFT</td>
 			<td valign="top">
-				<h3>It Traininmg</h3>
+				<h3>Index</h3>
 				<p align="justify">
 					<b><abbr title="content management System">Lorem ipsum dolor sit amet</abbr></b>, consectetur adipiscing elit, sed do eiusmod <big><big>tempor incididunt</big></big> ut labore et <small>dolore magna aliqua.</small>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, <i>sunt in culpa qui officia deserunt mollit anim id est laborum."</i>
 				</p>
