--- a/class-sourc/class-03/sign-up.html
+++ b/class-sourc/class-03/sign-up.html
@@ -3,6 +3,7 @@
 <head>
     <title>sign-up</title>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<table border="1" align="center" width="980px" height="111500x">
@@ -22,7 +23,18 @@
 		<tr>
 			<td>LEFT</td>
 			<td valign="top">
-				<h3>It Traininmg</h3>
+				<h3>Sign-Up</h3>
+				<hr>
+				<form action="" method="post">
+					<table>
+						<tr>
+							<td> <strong>Name:</strong></td>
+							<td>
+								<input type="text" name="full name">
+							</td>
+						</tr>
+					</table>
+				</form>
 			</td>
 			<td width="150px">RIGHT</td>
 		</tr>
