--- a/class-sourc/class-03/about-us.html
+++ b/class-sourc/class-03/about-us.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>My Three class</title>
+    <title>Abut-us</title>
 	<meta charset="UTF-8">
-	<style>
-	
-	</style>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<table border="1" align="center" width="980px" height="111500x">
@@ -18,14 +16,14 @@
 		<tr>
 			<td colspan="3" height="50px">
 				<a href="index.html">Home</a> !
-				<a href="about_us.html">Abut us</a> !
-				<a href="sign_up.html">Sign Up</a> !
+				<a href="about-us.html">Abut-us</a> !
+				<a href="sign-up.html">Sign-Up</a> !
 			</td>
 		</tr>
 		<tr>
 			<td>LEFT</td>
 			<td valign="top">
-				<h3>It Traininmg</h3>
+				<h3>About-us</h3>
 			</td>
 			<td width="150px">RIGHT</td>
 		</tr>
