--- a/class-sourc/class-03/class-03.2nd part/index.html
+++ b/class-sourc/class-03/class-03.2nd part/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class-03/2nd part</title>
+    <title>Class-03-2nd-part</title>
     <link rel="stylesheet" href="tamplate.css">
 </head>
 <body>
@@ -13,6 +13,7 @@
             <div id="logo"></div>
             <div id="banar"></div>
         </div>
+        <div id="menu"></div>
     </div>
 </body>
 </html>
