--- a/jossor-board/Jossor-board.html
+++ b/jossor-board/Jossor-board.html
@@ -26,7 +26,7 @@
             <div class="news-1">খবরঃ</div>
             <div class="news-2">
                 <marquee behavior="" direction="left">
-                    <img src="img-2/mujib_logo.png" alt="images" class="marquss-img">
+                    <img src="img/mujib_logo.png" alt="images" class="marquss-img">
                     <span>এইচএসসি পরীক্ষা-2022 এর পুন:নিরীক্ষণের ফলাফল প্রকাশিত হয়েছে, পরীক্ষা নিয়ন্ত্রক।</span>
                 </marquee>
             </div> 
@@ -41,6 +41,9 @@
             <div class="footer-right">
                 This is footer-Right
             </div>
+        </div>
+        <div class="footer-area">
+            This is footer-area
         </div>
     </div>
 </body>
