--- a/class-sourc/class-05/class-05.html
+++ b/class-sourc/class-05/class-05.html
@@ -13,10 +13,20 @@
             <div id="logo"></div>
             <div id="banar"></div>
         </div>
-        <div id="menu"></div>
+        <!--class-05 -->
+        <div id="menu">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Service</li>
+                <li>Contact</li>
+            </ul>
+        </div>
         <div id="content-wrapper">
             <div id="left"></div>
-            <div id="content"></div>
+            <div id="content">
+                <div class="box"></div>
+            </div>
             <div id="right"></div>
         </div>
         <div id="big-footer-wrapper">
