learn navigation manu

--- a/jossor-board/Jossor-board.html
+++ b/jossor-board/Jossor-board.html
@@ -22,6 +22,19 @@
                 </p>
             </div>
         </div>
+        <div class="area">
+          <ul>
+            <li>Home</li>
+            <li>About Board</li>
+            <li>Committees</li>
+            <li>Deprtments</li>
+            <li>Acodemic Calender</li>
+            <li>Fees</li>
+            <li>Result</li>
+            <li>Gallery</li>
+            <li>Contacat Us</li>
+          </ul>
+        </div>
         <div class="news">
             <div class="news-1">খবরঃ</div>
             <div class="news-2">
@@ -33,7 +46,43 @@
         </div>
         <div class="footer">
             <div class="footer-1">
-                This is footer-1
+                <div class="mujib">
+                    <img src="img/mujib_logo.png" alt="mujib-images"class="mujib">
+                </div>
+                <div class="march">
+                    <p>৭ই মার্চের ঐতিহাসিক ভাষণ</p>
+                </div>
+                <div class="video">
+                    <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" class="video">
+                    </iframe>
+                </div>
+                <div class="services">
+                    <p>Our Services</p>
+                </div>
+                <div class="carry">
+                    <p>যশোর বোর্ড তথ্য বাতায়ন</p>
+                </div>
+                <div class="Result">
+                    <p>HSC Result 2022</p>
+                </div>
+                <div class="reg">
+                    <p>HSC Reg. Card</p>
+                </div>
+                <div class="Important-Links">
+                    <p>Important Links</p>
+                </div>
+                <div class="Education">
+                    <p>Education Board Result</p>
+                </div>
+                <div class="dhaka">
+                    <p>Dhaka Board</p>
+                </div>
+                <div class="international">
+                    <img src="img/আন্তর্জাতিক.jpg" alt="images"class="international">
+                </div>
+                <div class="emergency">
+                    <img src="img/call_center.jpg" alt="images" class="emergency">
+                </div>
             </div>
             <div class="footer-lift">
                 This is footer-Lift
@@ -42,8 +91,10 @@
                 This is footer-Right
             </div>
         </div>
-        <div class="footer-area">
-            This is footer-area
+        <div class="Copyright">
+            <p>
+                Copyright © 2012-2023 Board of Intermediate and Secondary Education, Jashore. Government of the People's Republic of Bangladesh. All rights reserved.
+            </p>
         </div>
     </div>
 </body>
