--- a/jossor-board/Jossor-board.html
+++ b/jossor-board/Jossor-board.html
@@ -84,11 +84,55 @@
                     <img src="img/call_center.jpg" alt="images" class="emergency">
                 </div>
             </div>
-            <div class="footer-lift">
-                This is footer-Lift
+            <div class="footer-left">
+                <div class="Screenshot">
+                    <img src="img/Screenshot_2.png" alt="images" class="Screenshot">
+                </div>
+                <div class="Latest">
+                    <h1>Latest Notice</h1><br>
+                    <a href="https://www.jessoreboard.gov.bd/uploads/notice/02_20230312161441_125.pdf">
+                        ২০২২-২০২৩ শিক্ষাবর্ষে একাদশ শ্রেণিতে যশোর শিক্ষা বোর্ডে যে সকল শিক্ষার্থী ভর্তি হতে পারেনি শুধুমাত্র তাদের জন্য ভর্তি বিজ্ঞপ্তি।
+                        কুষ্টিয়া জেলার মিরপুর উপজেলাধীন ধুবইল মাধ্যমিক বিদ্যালয়ের দাখিলকৃত ম্যানেজিং কমিটি গঠনের অনিয়মের বিরুদ্ধে অভিযোগ তদন্ত প্রসঙ্গে
+                        প্রধান শিক্ষক (প্রগতি মাধ্যমিক বিদ্যালয়, বারুইপাড়া, তালা, সাতক্ষীরা)
+                        অষ্টম, নবম এবং দশম শ্রেণির অভ্যন্তরীণ পরীক্ষাভিত্তিক চূড়ান্ত পাঠ্যসূচি বিভাজন ২০২৩।
+                    </a>
+                </div>
+                <div class="Notice">
+
+                </div>
             </div>
             <div class="footer-right">
-                This is footer-Right
+                <div class="chairman">
+                    <img src="img/chairman.png" alt="images" class="chairman">
+                    <p class="habib">Prof. Dr. Md. Ahsan Habib</p>
+                    <span class="chairman-title">Chairman</span>
+                </div>
+                <div class="biswas">
+                    <img src="img/img-23.png" alt="images" class="biswas">
+                    <p class="biswas-title">Dr. Biswas Shaheen Ahmmad</p>
+                    <span class="acting">Secretary (Acting)</span>
+                </div>
+                <div class="Shaheen">
+                    <img src="img/img-23.png" alt="imeges" class="Shaheen">
+                    <p class="ahmmad">Dr. Biswas Shaheen Ahmmad</p>
+                    <span class="controller">Controller of Examinations</span>
+                </div>
+                <div class="notice-board">
+                    Notice Board
+                </div>
+                <div class="administration">
+                    <a href="https://www.jessoreboard.gov.bd/uploads/notice/01_20230306144053_993.pdf">
+                        Administration
+                    </a>
+                </div>
+                <div class="college">
+                    <a href="https://www.jessoreboard.gov.bd/uploads/notice/03_20230219113913_723.pdf">
+                        College
+                    </a>
+                </div>
+                <div class="">
+                    সেবা পেতে জরুরী প্রয়োজনে যোগাযোগ করুন
+                </div>
             </div>
         </div>
         <div class="Copyright">
