--- a/css-practice/nav-menu-2/index.html
+++ b/css-practice/nav-menu-2/index.html
@@ -4,17 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nave-manu-to</title>
+    <title>Nav-Menu</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="nave-manu">
+    <div class="nav-manu">
         <ul>
             <li>Home</li>
-            <li>About</li>
-            <li>Servic</li>
+            <li>About Board</li>
+            <li>Result</li>
             <li>Contact</li>
         </ul>
     </div>
+    <br>
+    <br>
+    <div class="nav-manu-to">
+        <ul>
+            <li>Home</li>
+            <li>About Board</li>
+            <li>Result</li>
+            <li>Contact</li>
+        </ul>
+    </div>
+    <br>
+    <br>
+    <div class="nav-manu-bar">
+        <ul>
+            <li>Home</li>
+            <li>About Board</li>
+            <li>Result</li>
+            <li>Contact</li>
+        </ul>
 </body>
 </html>
