--- a/css-practice/nav-menu/index.html
+++ b/css-practice/nav-menu/index.html
@@ -17,5 +17,20 @@
             <li>Contact</li>
         </ul>
     </div>
+    <p title="Lorem Ipsum">
+        Contrary to popular belief, 
+        <b>Lorem Ipsum is not simply random text</b>
+        It has roots in a piece of classical Latin 
+        <mark><b>literature from 45 BC</b></mark>,
+        making it over 2000 years old.
+        <del> Richard McClintock</del>, 
+        a Latin professor at
+        <em><b> Hampden-Sydney College</b></em>
+        in Virginia, looked up one of the more obscure 
+        <u>Latin words, consectetur,</u>
+        from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
+    </p>
+     Lorem <sup>Ipsum</sup>
+
 </body>
 </html>
