--- a/jossor-board/Jossor-board.html
+++ b/jossor-board/Jossor-board.html
@@ -24,25 +24,19 @@
         </div>
         <div class="area">
           <ul>
-            <li>Home</li>
-            <li>About Board</li>
-            <li>Committees</li>
-            <li>Deprtments</li>
-            <li>Acodemic Calender</li>
-            <li>Fees</li>
-            <li>Result</li>
-            <li>Gallery</li>
-            <li>Contacat Us</li>
+            <li>Home</li><li>About Board</li><li>Committees</li><li>Deprtments</li><li>Acodemic Calender</li><li>Fees</li><li>Result</li><li>Gallery</li><li>Contacat Us</li>
           </ul>
         </div>
         <div class="news">
             <div class="news-1">খবরঃ</div>
             <div class="news-2">
                 <marquee behavior="" direction="left">
-                    <img src="img/mujib_logo.png" alt="images" class="marquss-img">
-                    <span>এইচএসসি পরীক্ষা-2022 এর পুন:নিরীক্ষণের ফলাফল প্রকাশিত হয়েছে, পরীক্ষা নিয়ন্ত্রক।</span>
+                    <div class="marquee-content">
+                        <img src="img/mujib_logo.png" alt="images" class="marquss-img">
+                        <span>এইচএসসি পরীক্ষা-2022 এর পুন:নিরীক্ষণের ফলাফল প্রকাশিত হয়েছে, পরীক্ষা নিয়ন্ত্রক।</span>
+                    </div>
                 </marquee>
-            </div> 
+            </div>  
         </div>
         <div class="footer">
             <div class="footer-1">
