--- a/css-practice/it-bari-class/class-practice.html
+++ b/css-practice/it-bari-class/class-practice.html
@@ -66,14 +66,18 @@
             <td class="jesan">Fail</td>
         </tr>
     </table>
-    <div>
-        This is div tag
-    </div><b>Thsi is b tag</b>
-    <span>This is a span</span>
-    <b>Thsi is a b tag</b>
-    <p>This is a p tag</p>
-    <ul>This is a ul tag</ul>
-    <li>Thias is li tag</li>
-    <a>This is a tag</a>
+    <div id="wrapper">
+        <p>My name is shadhin</p>
+        <p>This is a p tag</p>
+        <span>This is a span tag</span>
+        <div>
+            <p>
+                <div>
+                    <p>Thais is inner p tag</p>
+                </div>
+            </p>
+        </div>
+        <p>This is a p tag</p>
+    </div>
 </body>
 </html>
