--- a/javaScript/index.html
+++ b/javaScript/index.html
@@ -4,32 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="js/bootstrap.js">
     <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h2>My first web page</h2>
+    <!-- <h2 class="a">My first web page</h2>
     <p>My first paragraph</p>
 
-    <p id="demo"></p>
+    <p id="demo">50</p>
+    <script>document.write("abcd")</script>
     <p id="demo1"></p>
+    <p id="demo2"></p> -->
 
+    <!--****************************************-->
 
-    <script>
+    <p id="demo"></p>
+    <p id="demo2"></p>
+    <p id="demo3"></p>
+    <!--****************************************-->
+
+    <!-- <script>
         document.getElementById("demo").innerHTML = 5 + 10;
         document.write(5+5);
-        window.alert(100);
+        document.write('igugvfg\n');
+        document.write('ghgh\n');
+        document.write('5+5\n');
+        document.write('uyouyu\n');
+
+        // window.alert(10);
+
     </script>
     <script>
-        let a, b, c, d, e, f;
+        let a, b, c, d, e, f,username;
         a = 10; 
         b = 6; 
         c = 20;
         d = 10;
         e = 5; 
-        f= a - b + c - d - e;
+        f = a - b + c - d - e;
+        username= 'shadhin hasan'
         document.getElementById("demo1").innerHTML = f;
+        
+        var x= 10;
+        document.getElementById("demo2").innerHTML = x ;
+        console.log('log test')
     </script>
-    <!-- <button onclick="window.print()">Print this page</button> -->
+    <br>
+    <button onclick="window.print()">Print this page</button> -->
+    <script src="test.js"></script>
+    <script src="class-2.js"></script>
 </body>
 </html>
